--- a/Supporters.css
+++ b/Supporters.css
@@ -9,7 +9,7 @@ TitanMusic | Developer: 3669054
 }
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
-    content: url("http://i.imgur.com/3WAxI63.png?1");
+    content: url("http://egorganisation.com/images/Medal%20Silver.png");
     top: 4px;
     left: 1px;
     position: relative;
@@ -39,7 +39,7 @@ TitanMusic | Developer: 3669054
 }
 
 #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("http://i.imgur.com/3WAxI63.png?1");
+    content: url("http://egorganisation.com/images/Medal%20Silver.png");
     top: 130px;
     left: 130px;
     position: absolute;
