--- a/TM.css
+++ b/TM.css
@@ -137,7 +137,36 @@ rcs.css:61
 	border-top: 10px solid hsla(220,100%,20%,.9) !important;
 	border-right: 10px solid hsla(220,100%,22%,.9) !important;
 	border-left: 10px solid transparent !important;
-	border-bottom: 10px solid transparent !important;	
+	border-bottom: 10px solid transparent !important;
+}	
+#dj-button {
+	border-radius: 50px;
+	background: linear-gradient(hsla(210,10%,50%,.3), hsla(210,10%,40%,.3));
+	box-shadow: 0 0 10px #000;
+}
+#dj-button:hover {
+	background: linear-gradient(hsla(210,10%,50%,.5), hsla(210,10%,40%,.5));
+}
+#dj-button .left {
+	border-radius: 50px 0 0 50px;
+	background: linear-gradient(135deg, hsla(210,80%,60%,.6), hsla(210,80%,50%,.6));
+	box-shadow: 0 0 10px #000;
+}
+#dj-button:hover .left {
+	background: linear-gradient(135deg, hsla(210,80%,60%,.9), hsla(210,80%,50%,.9));
+}
+#dj-button.is-leave .left, #dj-button.is-quit .left {
+	background: linear-gradient(135deg, hsla(15,80%,60%,.6), hsla(15,80%,50%,.6));
+}
+#dj-button.is-leave:hover .left, #dj-button.is-quit:hover .left {
+	background: linear-gradient(135deg, hsla(15,80%,60%,.9), hsla(15,80%,50%,.9));
+}
+#dj-button.is-locked {cursor: no-drop}
+#dj-button.is-locked .left, #dj-button.is-full .left {
+	background: linear-gradient(135deg, hsla(0,0%,10%,.6), hsla(0,0%,5%,.6));
+}
+#dj-button.is-locked:hover .left, #dj-button.is-full:hover .left {
+	background: linear-gradient(135deg, hsla(0,0%,10%,.9), hsla(0,0%,5%,.9));
 }
  #user-lists .group {
     background: linear-gradient(hsl(220,10%,10%), hsl(220,10%,5%)) !important;
