--- a/Staff.css
+++ b/Staff.css
@@ -78,7 +78,7 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
-    content: TitanMusic Staff;
+    content: TitanMusic Developer;
     background: url('http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png');
     padding: 3px 6px;
     color: white;
