--- a/Staff.css
+++ b/Staff.css
@@ -101,10 +101,64 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
-    content: 'TitanMusic Staff';
+    content: 'TitanMusic Developer';
     color: #808691;
     position: absolute;
     top: 118px;
     left: 130px;
 }
 
+/* keekz🐺 Hardstyle 2017 ♫ = 4766242 */
+
+#user-rollover.id-4766242 .meta, #user-rollover.id-4766242 .meta, #user-rollover.id-4766242 .meta {
+    height: 150px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 126px;
+}
+
+#chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before {
+    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    top: 3px;
+    left: 3px;
+    position: relative;
+}
+
+#chat [data-cid^='4766242-'] .un, #chat [data-cid^='4766242-'] .un, #chat [data-cid^='4766242-'] .un, #chat [data-cid^='4766242-'] .un, #chat [data-cid^='4766242-'] .un {
+    top: 3px ;
+    position: relative;
+}
+
+#chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after {
+    content: TitanMusic Staff;
+    background: url('http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+}
+
+#user-rollover.id-4766242 .meta, #user-rollover.id-4766242 .meta {
+    height: 150px ;
+}
+
+#user-rollover.id-v .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before {
+    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    top: 120px;
+    left: 109px;
+    position: absolute;
+}
+
+#user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after {
+    content: 'TitanMusic Staff';
+    color: #808691;
+    position: absolute;
+    top: 118px;
+    left: 130px;
+}
