--- a/Bot.css
+++ b/Bot.css
@@ -38,7 +38,7 @@ element.style {
 }
 
 #user-rollover.id-v .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    content: url("https://h30434.www3.hp.com/i/smilies/16x16_robot-very-happy.gif");
     top: 120px;
     left: 109px;
     position: absolute;
