--- a/Developer.css
+++ b/Developer.css
@@ -24,7 +24,7 @@ element.style {
 }
 
 #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5712221-'] .un:before {
-    content: url("http://www.ac-web.org/forums/images/award_iconsnew/award_star_bronze_2.png");
+    content: url("https://pastebin.com/favicon.ico");
     top: 3px;
     left: -3px;
     position: relative;
