--- a/Developer.css
+++ b/Developer.css
@@ -1,11 +1,19 @@
 /* Trigstur: 5712221 */
 
+.id-5712221 > .badge-box > i.bdg
+{
+    background-image:    url("http://25.media.tumblr.com/bf311a757586df96ba089aaad0484674/tumblr_mhfc9nHvos1r7c13zo1_500.gif");
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+}
+
 #user-lists .list.room .user .icon-chat-cohost {
     background: url(https://pastebin.com/favicon.ico) !important;
 }
 
 #user-rollover.id-5712221 .badge-box > i.bdg {
-    background-image: url(http://25.media.tumblr.com/bf311a757586df96ba089aaad0484674/tumblr_mhfc9nHvos1r7c13zo1_500.gif);
+    background-image: url("http://25.media.tumblr.com/bf311a757586df96ba089aaad0484674/tumblr_mhfc9nHvos1r7c13zo1_500.gif");
     background-size: cover;
     border-radius: 6px;
     background-repeat: no-repeat;
