--- a/Staff.css
+++ b/Staff.css
@@ -10,7 +10,7 @@ element.style {
 }
 
 #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before {
-    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
     top: 3px;
     left: 3px;
     position: relative;
@@ -23,7 +23,7 @@ element.style {
 
 #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after {
     content: TitanMusic Staff;
-    background: url('http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png');
+    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
     padding: 3px 6px;
     color: white;
     bottom: 20px;
@@ -38,7 +38,7 @@ element.style {
 }
 
 #user-rollover.id-v .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
     top: 120px;
     left: 109px;
     position: absolute;
@@ -66,7 +66,7 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
-    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
     top: 3px;
     left: 3px;
     position: relative;
@@ -78,8 +78,8 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
-    content: TitanMusic Developer;
-    background: url('http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png');
+    content: TitanMusic Owner;
+    background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
     color: white;
     bottom: 20px;
@@ -94,7 +94,7 @@ element.style {
 }
 
 #user-rollover.id-v .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
     top: 120px;
     left: 109px;
     position: absolute;
@@ -121,7 +121,7 @@ element.style {
 }
 
 #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before {
-    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
     top: 3px;
     left: 3px;
     position: relative;
@@ -134,7 +134,7 @@ element.style {
 
 #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after {
     content: TitanMusic Staff;
-    background: url('http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png');
+    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
     padding: 3px 6px;
     color: white;
     bottom: 20px;
@@ -149,7 +149,7 @@ element.style {
 }
 
 #user-rollover.id-v .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before {
-    content: url("http://canberra.naturemapr.org/Images/Badges/100-sightings-16.png");
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
     top: 120px;
     left: 109px;
     position: absolute;
