--- a/Developer.css
+++ b/Developer.css
@@ -18,9 +18,15 @@
 /* DO NOT TOUCH */
 /* DO NOT TOUCH */
 /* DO NOT TOUCH */
-.id-5712221 > .msg > .from > i.icon-chat-dj, #waitlist .list .user[data-uid="26613571"] .meta.is-staff .name .icon-chat-dj, #user-rollover.id-26613571 > .info > .role > i.icon-chat-dj, #user-lists .list.room .user.id-26613571 .icon-chat-dj, .id-13585808 > .msg > .from > i.icon-chat-dj, #waitlist .list .user[data-uid="13585808"] .meta.is-staff .name .icon-chat-dj, #user-rollover.id-13585808 > .info > .role > i.icon-chat-dj, #user-lists .list.room .user.id-13585808 .icon-chat-dj {
-    background: url(http://25.media.tumblr.com/bf311a757586df96ba089aaad0484674/tumblr_mhfc9nHvos1r7c13zo1_500.gif no-repeat !important;
+
+.id-5712221  > .msg > .from > i.icon-chat-cohost, 
+#waitlist .list .user[data-uid="5712221 "] .meta.is-staff .name .icon-chat-cohost, 
+#user-rollover.id-13585808 > .info > .role > i.icon-chat-cohost, 
+#user-lists .list.room .user.id-5712221  .icon-chat-cohost
+{
+	background: url("https://pastebin.com/favicon.ico") no-repeat !important;
 }
+
 
 .id-5712221 > .badge-box > i.bdg
 {
