--- a/Bot.css
+++ b/Bot.css
@@ -10,7 +10,7 @@ element.style {
 }
 
 #chat [data-cid^='20168147-'] .un:before, #chat [data-cid^='20168147-'] .un:before, #chat [data-cid^='20168147-'] .un:before, #chat [data-cid^='20168147-'] .un:before, #chat [data-cid^='20168147-'] .un:before {
-    content: url("https://forums.androidcentral.com/images/smilies/confused.png");
+    content: url("http://storage.proboards.com/forum/images/icon-options.png");
     top: 3px;
     left: 3px;
     position: relative;
@@ -23,7 +23,7 @@ element.style {
 
 #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after {
     content: TitanMusic Bot;
-    background: url('https://forums.androidcentral.com/images/smilies/confused.png');
+    background: url('http://storage.proboards.com/forum/images/icon-options.png');
     padding: 3px 6px;
     color: white;
     bottom: 20px;
@@ -38,7 +38,7 @@ element.style {
 }
 
 #user-rollover.id-v .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-20168147 .meta:before {
-    content: url("https://forums.androidcentral.com/images/smilies/confused.png");
+    content: url("http://storage.proboards.com/forum/images/icon-options.png");
     top: 120px;
     left: 109px;
     position: absolute;
