--- a/Staff.css
+++ b/Staff.css
@@ -101,7 +101,7 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
-    content: 'TitanMusic Developer';
+    content: 'TitanMusic Owner';
     color: #808691;
     position: absolute;
     top: 118px;
