--- a/Staff.css
+++ b/Staff.css
@@ -66,7 +66,7 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
+    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
     top: 3px;
     left: 3px;
     position: relative;
