--- a/Bot.css
+++ b/Bot.css
@@ -1,4 +1,12 @@
 /* Bot: 20168147 */
+
+#chat [data-cid^='20168147-'] .un:before, #chat [data-cid^='20168147-'] .un:before, #chat [data-cid^='20168147-'] .un:before, #chat [data-cid^='20168147-'] .un:before, #chat [data-cid^='20168147-'] .un:before {
+    content: url(http://storage.proboards.com/forum/images/icon-options.png);
+    top: -1px;
+    left: -3px;
+    position: relative;
+}
+
 #user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta {
     height: 150px;
 }
