--- a/Staff.css
+++ b/Staff.css
@@ -56,7 +56,7 @@ element.style {
 /* TitanMusic | Developer = 3669054 */
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
-    content: url(http://www.gotigersolutions.com/images/medal-gold.png);
+    content: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png);
     top: -1px;
     left: -3px;
     position: relative;
