--- a/Bot.css
+++ b/Bot.css
@@ -1,6 +1,20 @@
 /* Bot: 20168147 */
 
 
+#user-rollover.id-20168147 .badge-box > i.bdg {
+    background-image: url("https://cdn.pixabay.com/photo/2014/10/03/17/16/gear-472006_960_720.jpg");
+    background-size: cover;
+    border-radius: 6px;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.id-20168147 > .badge-box > i.bdg
+{
+    background-image:    url("https://cdn.pixabay.com/photo/2014/10/03/17/16/gear-472006_960_720.jpg");
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+}
 
 #user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta {
     height: 150px;
