--- a/TM.css
+++ b/TM.css
@@ -234,6 +234,9 @@ element.style {
 }
 #dialog-user-role .button.cancel span {
 	color: hsl(15,80%,50%);
+}	
+#dialog-user-role .role-menu .menu ul li {
+    border-color: hsla(210,10%,8%,.8);	
 }
 #search-suggestion {
 	top: 48px;
@@ -441,3 +444,108 @@ element.style {
     box-shadow: inset -1px 0 7px hsla(0,0%,0%,.7);
     width: 7px ;
 }
+#media-panel #playlist-activate-button {
+    background: linear-gradient(hsl(260,50%,40%), hsl(260,40%,30%));
+    border-radius: 30px 0 0 30px;
+    box-shadow: inset 0 0 10px 1px hsl(260,50%,45%);
+}
+
+#media-panel #playlist-activate-button.active {
+    background: linear-gradient(hsl(200,100%,30%), hsl(210,100%,20%));
+    box-shadow: inset 0 0 10px 1px hsl(210,80%,30%);
+    color: hsl(220,100%,50%) ;
+}
+
+#media-panel #playlist-activate-button.active span, #dialog-user-role .name {
+    color: #eee ;
+}
+
+#media-panel #playlist-activate-button.active:hover {
+    cursor: default ;
+}
+
+#media-panel #playlist-activate-button:hover {
+    background: linear-gradient(hsl(260,50%,50%), hsl(260,50%,40%));
+    box-shadow: inset 0 0 10px 1px hsl(260,50%,55%);
+}
+
+#media-panel #playlist-delete-button {
+    background: linear-gradient(hsl(0,80%,50%), hsl(20,80%,30%));
+    border-radius: 0 7px 7px 0;
+    box-shadow: inset 0 0 10px 1px hsl(0,50%,55%);
+}
+
+#media-panel #playlist-delete-button:hover {
+    background: linear-gradient(hsl(0,100%,60%), hsl(20,100%,50%));
+    box-shadow: inset 0 0 10px 1px hsla(0,100%,100%,.5);
+}
+
+#media-panel #playlist-edit-button {
+    background: linear-gradient(hsl(200,80%,50%), hsl(170,80%,30%));
+    box-shadow: inset 0 0 10px 1px hsl(200,50%,55%);
+}
+
+#media-panel #playlist-edit-button:hover {
+    background: linear-gradient(hsl(200,100%,50%), hsl(170,100%,30%));
+    box-shadow: inset 0 0 10px 1px hsla(0,0%,100%,.3);
+}
+
+#media-panel #playlist-shuffle-button {
+    background: linear-gradient(hsl(140,80%,40%), hsl(120,80%,30%));
+    box-shadow: inset 0 0 10px 1px hsla(0,0%,100%,.5);
+}
+
+#media-panel #playlist-shuffle-button:hover {
+    background: linear-gradient(hsl(140,100%,50%), hsl(120,100%,30%));
+    box-shadow: inset 0 0 10px 1px hsl(130,50%,55%);
+}
+
+#media-panel .media-list .playlist-media-first-item .actions .action:hover, #media-panel .media-list .playlist-media-first-item.now-playing .actions .action:hover, #media-panel .media-list .playlist-media-last-item .actions .action:hover, .playlist-media-item .actions .action:hover {
+    background: radial-gradient(hsl(210,100%,50%), hsl(210,100%,20%)) ;
+    box-shadow: 0 0 10px #000;
+}
+
+#media-panel .media-list .playlist-media-first-item .actions .action:hover:first-child, #media-panel .media-list .playlist-media-first-item.now-playing .actions .action:hover:first-child, #media-panel .media-list .playlist-media-last-item .actions .action:hover:first-child, .playlist-media-item .actions .action:hover:first-child {
+    border-radius: 30px 0 0 30px;
+}
+
+#media-panel .media-list .playlist-media-first-item .actions, #media-panel .media-list .playlist-media-last-item .actions, .playlist-media-item .actions {
+    background: linear-gradient(hsla(210,100%,20%,.8), hsla(210,100%,10%,.8)) ;
+    border-radius: 30px 0 0 30px;
+}
+
+#media-panel .media-list .playlist-media-first-item.now-playing {
+    background: linear-gradient(hsl(200,100%,40%), hsl(200,100%,30%)) ;
+    border-bottom: none ;
+    border-radius: 7px;
+    box-shadow: inset 0 0 10px 1px hsl(200,100%,30%);
+}
+
+#media-panel .media-list .playlist-media-first-item.selected {
+    background: linear-gradient(to right, hsl(220,100%,30%), hsl(220,100%,40%)) ;
+    border-radius: 7px;
+    box-shadow: inset 0 0 2px 1px hsl(205,100%,50%);
+}
+
+#media-panel .media-list .playlist-media-item.in-history, #media-panel .media-list .playlist-media-last-item.in-history {
+    background: hsla(30,100%,30%,.1);
+    box-shadow: inset 0 1px 0 hsl(30,80%,20%);
+    color: hsl(20,80%,55%);
+}
+
+#media-panel .media-list .playlist-media-item.in-history.selected, #media-panel .media-list .playlist-media-last-item.in-history.selected {
+    background: linear-gradient(hsl(20,80%,30%), hsl(20,80%,20%));
+    border-radius: 7px;
+    box-shadow: inset 0 0 1px 1px hsl(20,80%,40%);
+    color: hsl(20,100%,60%);
+}
+
+#media-panel .media-list .playlist-media-item.selected, #media-panel .media-list .playlist-media-last-item.selected {
+    background: linear-gradient(hsl(220,100%,20%), hsl(220,100%,10%));
+    border-radius: 7px;
+    box-shadow: inset 0 0 1px 1px hsl(205,100%,30%);
+    color: #EEE;
+}
+
+#media-panel .media-list.playlist-media .meta {
+    border: none ;
