--- a/Bot.css
+++ b/Bot.css
@@ -11,7 +11,7 @@
     content:'BOT';
 }
 #user-rollover.id-20168147 .badge-box > i.bdg {
-    background-image: url("https://cdn.pixabay.com/photo/2014/10/03/17/16/gear-472006_960_720.jpg");
+    background-image: url("http://i.imgur.com/9g4nqSo.png");
     background-size: cover;
     border-radius: 6px;
     background-repeat: no-repeat;
@@ -19,7 +19,7 @@
 }
 .id-20168147 > .badge-box > i.bdg
 {
-    background-image:    url("https://cdn.pixabay.com/photo/2014/10/03/17/16/gear-472006_960_720.jpg");
+    background-image:    url("http://i.imgur.com/9g4nqSo.png");
     background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
