--- a/Staff.css
+++ b/Staff.css
@@ -164,3 +164,57 @@ element.style {
     top: 118px;
     left: 130px;
 }
+
+/* ONEANDONLY23 = 16021074 */
+
+#user-rollover.id-16021074 .meta, #user-rollover.id-16021074 .meta, #user-rollover.id-16021074 .meta {
+    height: 150px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 126px;
+}
+
+#chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before {
+    content: url("https://pastebin.com/favicon.ico");
+    top: 3px;
+    left: -3px;
+    position: relative;
+}
+
+#chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un {
+    top: -3px ;
+    position: relative;
+}
+
+#chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after {
+    content: TitanMusic Developer;
+    background: url('https://pastebin.com/favicon.ico');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+}
+
+#user-rollover.id-16021074 .meta, #user-rollover.id-16021074 .meta {
+    height: 150px ;
+}
+
+#user-rollover.id-v .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before {
+    content: url("https://pastebin.com/favicon.ico");
+    top: 120px;
+    left: 109px;
+    position: absolute;
+}
+
+#user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after {
+    content: 'TitanMusic Developer';
+    color: #808691;
+    position: absolute;
+    top: 118px;
+    left: 130px;
