--- a/Custom.css
+++ b/Custom.css
@@ -147,4 +147,401 @@ background: linear-gradient(135deg, hsla(0,0%,10%,.9), hsla(0,0%,5%,.9));
 .playlist-media-item:nth-child(2n+1) {
     background: hsla(219,15%,15%,.6);
     color: #AAA;
+}	
+#room-settings .general-settings button, #room-settings .general-settings .option.enabled button.off {
+    background: linear-gradient(hsl(220,5%,20%), hsl(220,5%,10%)) ;
+    box-shadow: inset 0 0 2px hsla(0,0%,100%,.5) ;
+}
+
+#room-settings .general-settings button.off, #room-settings .general-settings .option.enabled button.on {
+    background: linear-gradient(hsl(220,50%,40%), hsl(220,50%,30%)) ;
+    box-shadow: inset 0 0 2px hsla(0,0%,100%,.5) ;
+}
+
+#room-settings .general-settings button:hover, #room-settings .general-settings .option.enabled button.off:hover {
+    background: linear-gradient(hsl(220,50%,20%), hsl(220,50%,10%)) ;
+    box-shadow: inset 0 0 2px hsla(0,0%,100%,.5) ;
+}
+
+#room-settings a:hover, #chat a:hover {
+    color: hsl(200,100%,55%) ;
+    text-shadow: 0 0 5px;
+}
+
+#user-friends .row {
+    border-radius: 20px;
+    box-shadow: 0 0 10px #000;
+}
+
+#user-friends .row .negative {
+    background: linear-gradient(hsla(20,90%,50%,.3), hsla(20,90%,40%,.3)) ;
+    border-radius: 20px 0px;
+}
+
+#user-friends .row .negative:hover {
+    background: linear-gradient(hsla(20,90%,50%,.8), hsla(20,90%,40%,.8)) ;
+}
+
+#user-friends .row .positive {
+    background: linear-gradient(hsla(210,100%,50%,.3), hsla(210,100%,40%,.3)) ;
+    border-radius: 0 20px;
+}
+
+#user-friends .row .positive:hover {
+    background: linear-gradient(hsla(210,100%,50%,.8), hsla(210,100%,40%,.8)) ;
+}
+
+#user-menu .avatar {
+    background: linear-gradient(rgba(0,0,0,0)70%, hsla(140,50%,90%,.4) 80%),
+    linear-gradient(hsl(200,70%,20%), hsl(140,70%,20%)) ;
+    box-shadow: inset 0 0 30px #000;
+}
+
+#user-menu .count, .requests .count, .buttons .count, .request-count, .friends .header i {
+    background: radial-gradient(hsl(215,100%,50%), hsl(210,100%,30%)) ;
+    box-shadow: inset 0 0 10px hsl(200,100%,50%);
+    text-shadow: 0 0 3px #000;
+}
+
+#user-menu .item .count, #room-settings-menu .item .count {
+    color: #eee;
+    /* Fix for hover color changing count color by inheritance */
+}
+
+#user-menu .item.selected, #room-settings-menu .item.selected {
+    background: linear-gradient(hsl(205,100%,40%), hsl(205,100%,30%));
+    box-shadow: inset 0 0 10px 1px hsla(0,0%,100%,.4);
+}
+
+#user-menu .item:hover i, #room-settings-menu .item:hover i {
+    filter: brightness(200%);
+}
+
+#user-menu .item:hover, #room-settings-menu .item:hover {
+    background: linear-gradient(hsla(205,100%,40%,.6), hsla(205,100%,30%,.6));
+    box-shadow: inset 0 0 10px 1px hsla(0,0%,100%,.2);
+}
+
+#user-menu .item:not(.selected), #room-settings-menu .item:not(.selected) {
+    color: hsl(210,10%,60%);
+}
+
+#user-menu .item:not(.selected):hover, #room-settings-menu .item:not(.selected):hover {
+    color: hsl(210,10%,80%);
+}
+
+#user-menu .selected .count, .button:hover .count, #friends-button.selected span, #user-friends .requests.selected span, .friends .header:hover i {
+    background: radial-gradient(hsl(210,10%,20%), hsl(0,0%,0%)) ;
+    box-shadow: inset 0 0 1px #000;
+    font-weight: bold;
+}
+
+#user-menu, #room-settings-menu, #playlist-menu {
+    background: linear-gradient(to right, hsla(210,10%,40%,0), hsla(210,10%,50%,.2));
+}
+
+#user-rollover {
+    background: linear-gradient(135deg, hsla(0,0%,20%,.6), hsla(0,0%,0%,.6));
+    border-radius: 30px 30px 0 0;
+    box-shadow: 0 0 10px #000;
+}
+
+#user-rollover .action {
+    background: radial-gradient(hsla(0,0%,7%,.8), hsla(0,0%,0%,.8)) ;
+    box-shadow: 0 0 2px 1px #151515 ;
+}
+
+#user-rollover .action:hover {
+    background: radial-gradient(hsla(210,100%,30%,.9), hsla(210,100%,20%,.9)) ;
+    box-shadow: inset 0 0 50px #000 ;
+}
+
+#user-rollover .arrow-down, #user-rollover.self.can-skip .arrow-down {
+    border-top-color: hsla(220,100%,15%,.5) ;
+}
+
+#user-rollover .info {
+    background: linear-gradient(hsla(220,100%,30%,.5), hsla(220,100%,15%,.5));
+    border-radius: 50% 50% 0 0 ;
+    box-shadow: 0px -2px 10px -1px #000;
+}
+
+#user-rollover .info .badge-box, #user-rollover .background, #video-only-dj .background, #search-suggestion, #search-suggestion ul {
+    background: rgba(0,0,0,0);
+}
+
+#user-rollover .info i + span {
+    text-shadow: 0 0 5px #000;
+}
+
+#user-rollover .meta.online .status i {
+    display: none;
+}
+
+#user-rollover .meta.online .status span {
+    color: hsl(80,70%,50%);
+    margin-left: 0;
+}
+
+#user-rollover .meta.subscriber .thumb, #waitlist .is-subscriber .thumb {
+    border-color: hsl(45,80%,45%) ;
+    box-shadow: 0 0 7px hsl(45,80%,45%) ;
+}
+
+#user-rollover .meta.subscriber .thumb.large {
+    box-shadow: 0 0 15px hsl(45,80%,45%) ;
+}
+
+#user-rollover.expand .arrow-down, #user-rollover.expand.self.can-skip .arrow-down {
+    border-top-color: hsla(0,0%,10%,.6) ;
+}
+
+#user-rollover.expand.can-skip.chat .arrow-down, #user-rollover.expand.chat .arrow-down, #user-rollover.expand.self.can-skip.chat .arrow-down {
+    border-left-color: hsla(0,0%,10%,.6) ;
+}
+
+#user-rollover.is-staff .meta.online .thumb, #waitlist .is-staff .thumb {
+    border-color: hsl(270,50%,50%) ;
+    box-shadow: 0 0 7px hsl(270,50%,50%) ;
+}
+
+#user-rollover.is-staff .meta.online .thumb.large {
+    box-shadow: 0 0 15px hsl(270,50%,50%) ;
+}
+
+#user-settings .container button:hover {
+    background: linear-gradient(hsl(10,80%,30%), hsl(0,80%,20%));
+}
+
+#user-settings .slider .bar {
+    width: calc(100% - 1px) ;
+}
+
+#user-store .badges .cell:hover {
+    background: radial-gradient(hsl(220,50%,40%), hsl(220,50%,20%)) ;
+}
+
+#user-view #user-communities .grid .cell.cta button {
+    background: linear-gradient(hsl(210,10%,20%), hsl(210,10%,10%)) ;
+    border-radius: 0 0 30px 30px;
+    opacity: 1;
+    transition: all .15s ease-out;
+}
+
+#user-view #user-communities .grid .cell.cta:hover button {
+    background: linear-gradient(hsl(210,10%,30%), hsl(210,10%,20%)) ;
+    border-radius: 30px;
+    height: 300px;
+    opacity: .8;
+    position: absolute;
+    top: 0 ;
+}
+
+#user-view, #dashboard, #room-settings, #media-panel, #playlist-panel, #history-panel {
+    background: linear-gradient(hsla(210,10%,7%,.9), hsla(210,10%,5%,.9)) ;
+}
+
+.drag-media-box {
+    background: linear-gradient(hsla(210,50%,50%,.8), hsla(220,50%,50%,.8));
+    border-radius: 0 10px 10px 10px;
+    margin-left: 2px;
+    margin-top: 2px;
+}
+
+.drag-media-corner {
+    left: -2px;
+    top: -2px;
+}
+
+.dropdown dd .row:hover span {
+    color: #FFF;
+}
+
+.dropdown dd .row:hover, .chat-suggestion-item[style='background: rgb(45, 49, 58);'], #search-suggestion .search-suggestion-item.selected, #dialog-restricted-media .row.selected, #dialog-user-role .role-menu .menu ul li:hover {
+    background: linear-gradient(hsla(210,10%,20%,.8), hsla(210,10%,15%,.8)) ;
+}
+
+.dropdown dd span {
+    color: #AAA;
+}
+
+.dropdown dd, #chat-suggestion, #dialog-user-role .role-menu .menu ul li, #search-suggestion li, #dialog-restricted-media .row.selected {
+    background: hsla(210,10%,10%,.8);
+}
+
+.dropdown dt {
+    border-radius: 10px;
+    box-shadow: inset -39px 0 0 hsla(0,0%,100%,.15) ;
+}
+
+.dropdown dt .level {
+    color: #eee ;
+}
+
+.dropdown.open, .dropdown.open dt, #dialog-user-role .role-menu:hover {
+    border-radius: 10px 10px 0 0;
+    font-weight: normal;
+}
+
+.grid .cell {
+    background: radial-gradient(hsl(220,50%,40%), hsl(220,50%,20%)) ;
+    border-radius: 30px;
+    box-shadow: 0 0 10px #000;
+}
+
+.grid .cell .bar .favorite.selected {
+    background: linear-gradient(hsl(220,70%,50%), hsl(220,70%,40%)) ;
+}
+
+.grid .cell .bar .favorite.selected .icon-grab {
+    background-position: -35px -280px;
+}
+
+.grid .cell .bar, .grid .cell .meta, #user-friends .row {
+    background: linear-gradient(hsl(210,10%,15%), hsl(210,10%,10%)) ;
+}
+
+.grid .cell .meta .host {
+    color: #eee ;
+    text-align: center;
+    top: 6px;
+}
+
+.grid .cell .meta .join {
+    background: hsl(220,50%,20%) ;
+    border: 1px solid hsl(220,50%,30%) ;
+    border-radius: 30px;
+    box-shadow: 0 0 3px #000;
+}
+
+.grid .cell .top .expires span {
+    color: hsl(30,100%,50%) ;
+}
+
+.grid .cell .top .expires, .grid .cell .top .prices, #the-user-profile .badge-box, #media-panel {
+    background: transparent ;
+}
+
+.grid .cell.cta {
+    height: 210px ;
+}
+
+.inventory.button .background {
+    visibility: hidden;
+}
+
+.jspTrack {
+    box-shadow: inset -1px 0 10px hsla(0,0%,20%,1);
+}
+
+.offline .thumb {
+    border-color: hsl(0,0%,40%) ;
+    box-shadow: none ;
+}
+
+.pop-menu .bar {
+    background: linear-gradient(hsla(260,50%,50%,.8), hsla(260,50%,30%,.8));
+}
+
+.pop-menu .bar-divider {
+    background: linear-gradient(hsla(0,0%,90%,.8), hsla(0,0%,60%,.8));
+}
+
+.pop-menu .menu ul {
+    background: hsla(260,10%,7%,.8);
+}
+
+.pop-menu .menu ul .create:hover {
+    background: linear-gradient(hsl(260,40%,50%), hsl(260,40%,30%));
+}
+
+.pop-menu .menu ul i + span {
+    font-weight: bold;
+}
+
+.pop-menu .menu ul li:hover {
+    background: linear-gradient(hsla(260,50%,50%,.2), hsla(260,50%,30%,.2));
+}
+
+.pop-menu .menu::-webkit-scrollbar {
+    background: hsl(260,10%,20%) ;
+    box-shadow: inset 0 0 10px #000;
+    width: 10px;
+}
+
+.pop-menu .menu::-webkit-scrollbar-thumb {
+    background: linear-gradient(to right, hsl(260,40%,60%), hsl(260,40%,40%));
+    box-shadow: inset 0 0 5px hsla(0,0%,100%,.3);
+}
+
+.pop-menu, .pop-menu .bar {
+    background: transparent;
+    border-radius: 20px 20px 0 0;
+}
+
+.subscribe-button:hover {
+    background: linear-gradient(hsl(40,70%,30%), hsl(40,70%,20%));
+}
+
+.tab-menu .selected, .dropdown.open {
+    background: linear-gradient(hsl(210,80%,40%), hsl(210,80%,30%)) ;
+    box-shadow: inset 1px 1px 10px -1px hsla(220,80%,50%,.5) ;
+}
+
+.tab-menu button, #user-settings .container button, .subscribe-button, .dropdown, #dialog-user-role .role-menu {
+    background: linear-gradient(hsl(220,5%,20%), hsl(220,5%,10%));
+    border-radius: 10px;
+    box-shadow: inset 0 0 2px hsla(0,0%,100%,.5) ;
+}
+
+.tab-menu button:hover, .dropdown:hover {
+    background: linear-gradient(hsl(220,80%,20%), hsl(220,80%,10%));
+}
+
+.thumb {
+    background: hsla(210,10%,10%,.4);
+}
+
+.thumb.large, #user-rollover .meta.online .thumb.large {
+    box-shadow: 0 0 15px hsl(80,70%,50%) ;
+}
+
+.thumb.large, .thumb, #user-rollover .meta.online .thumb {
+    border-color: hsl(80,70%,50%) ;
+    box-shadow: 0 0 7px hsl(80,70%,50%) ;
+}
+
+.user-content .avatars .cell:hover .top, .user-content .avatars .cell.selected .top {
+    background: linear-gradient(rgba(0,0,0,0)70%, hsla(0,0%,100%,.2) 80%),
+	url(https://raw.githubusercontent.com/Plug-It/pi/pre-release/img/other/shop-hover.png) ;
+}
+
+.user-content .avatars .grid .cell .top {
+    background: linear-gradient(rgba(0,0,0,0)70%, hsla(210,10%,80%,.2) 80%),
+	url(https://raw.githubusercontent.com/Plug-It/pi/pre-release/img/other/shop.png) ;
+    box-shadow: inset 0 0 40px #000;
+}
+
+.user-content .avatars .grid .cell, .user-content .avatars .grid .cell .top {
+    border-radius: 30px;
+}
+
+.user-content .badges .cell {
+    background: radial-gradient(hsl(210,10%,10%), hsl(210,10%,5%)) ;
+    box-shadow: inset 0 0 30px #000;
+}
+
+.user-content .badges .cell.selected {
+    background: url(https://raw.githubusercontent.com/Plug-It/pi/pre-release/img/other/badgebg.png) ;
+    box-shadow: inset 0 0 20px 2px hsla(0,0%,100%,.2) ;
+}
+
+.user-content .badges .cell:hover {
+    background: url(https://raw.githubusercontent.com/Plug-It/pi/pre-release/img/other/badgebghover.png) 0 -12px no-repeat ;
+    box-shadow: 0 0 10px #000;
+}
+
+.user-content.profile .meta .blurb .box, .user-content.profile .meta .blurb input {
+    max-height: initial;
+    padding: 0 5px;
 }
