--- a/Staff.css
+++ b/Staff.css
@@ -190,8 +190,8 @@ element.style {
 }
 
 #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after {
-    content: TitanMusic Developer;
-    background: url('https://pastebin.com/favicon.ico');
+    content: TitanMusic Co-Owner;
+    background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
     color: white;
     bottom: 20px;
@@ -206,14 +206,14 @@ element.style {
 }
 
 #user-rollover.id-v .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before {
-    content: url("https://pastebin.com/favicon.ico");
+    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
     top: 120px;
     left: 109px;
     position: absolute;
 }
 
 #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after {
-    content: 'TitanMusic Developer';
+    content: 'TitanMusic Co-Owner';
     color: #808691;
     position: absolute;
     top: 118px;
