--- a/Bot.css
+++ b/Bot.css
@@ -1,104 +1,1 @@
-/* Bot: 20168147 */
-
-#user-rollover.id-20168147 > .info > .role span
-{
-    visibility: hidden;
-}
-
-#user-rollover.id-20168147 > .info > .role span:after
-{
-    visibility: visible;
-    content:'BOT';
-}
-#user-rollover.id-20168147 .badge-box > i.bdg {
-    background-image: url("http://i.imgur.com/eh2VJbv.gif");
-    background-size: cover;
-    border-radius: 6px;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-.id-20168147 > .badge-box > i.bdg
-{
-    background-image:    url("http://i.imgur.com/eh2VJbv.gif");
-    background-size:     cover;
-    background-repeat:   no-repeat;
-    background-position: center center;
-}
-
-#user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta {
-    height: 150px;
-}
-element.style {
-    height: 150px;
-}
-#user-rollover .meta {
-    min-height: 126px;
-}
-
-#chat [data-cid^='20168147-'] .un, #chat [data-cid^='20168147-'] .un, #chat [data-cid^='20168147-'] .un, #chat [data-cid^='20168147-'] .un, #chat [data-cid^='20168147-'] .un {
-    top: 3px ;
-    position: relative;
-}
-
-#chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after {
-    content: TitanMusic Bot;
-    background: url('http://storage.proboards.com/forum/images/icon-options.png');
-    padding: 3px 6px;
-    color: white;
-    bottom: 20px;
-    position: absolute;
-    left: 5px;
-    width: 79px;
-    height: 26px;
-}
-
-#user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta {
-    height: 150px ;
-}
-
-#user-rollover.id-v .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-20168147 .meta:before, #user-rollover.id-20168147 .meta:before {
-    content: url("http://storage.proboards.com/forum/images/icon-options.png");
-    top: 120px;
-    left: 109px;
-    position: absolute;
-}
-
-#user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after {
-    content: 'TitanMusic Bot';
-    color: #808691;
-    position: absolute;
-    top: 118px;
-    left: 130px;
-}
-
-
-
-    
-.id-20168147  > .msg > .from > i.icon-chat-manager, 
-#waitlist .list .user[data-uid="20168147 "] .meta.is-staff .name .icon-chat-manager, 
-#user-rollover.id-20168147 > .info > .role > i.icon-chat-manager, 
-#user-lists .list.room .user.id-20168147  .icon-chat-manager
-{
-	background: url("http://storage.proboards.com/forum/images/icon-options.png") no-repeat !important;
-}
-
-
-.id-5712221 > .badge-box > i.bdg
-{
-    background-image:    url("https://cdn.pixabay.com/photo/2014/10/03/17/16/gear-472006_960_720.jpg");
-    background-size:     cover;
-    background-repeat:   no-repeat;
-    background-position: center center;
-}
-
-#user-lists .list.room .user .icon-chat-cohost {
-    background: url(https://pastebin.com/favicon.ico) !important;
-}
-
-#user-rollover.id-5712221 .badge-box > i.bdg {
-    background-image: url("https://cdn.pixabay.com/photo/2014/10/03/17/16/gear-472006_960_720.jpg");
-    background-size: cover;
-    border-radius: 6px;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
+/* 🖕 */
